added more dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,5 @@ Package: placeholder
 Type: Book
 Title: Does not matter.
 Version: 0.0.1
-Imports: bookdown, tidyverse, DiagrammeR, tabr
+Imports: bookdown, tidyverse, DiagrammeR, tabr, tinytex, sessioninfo
 Remotes: rstudio/bookdown
