--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: R
+language: r
 cache:
   packages: true
   directories:
@@ -19,4 +19,4 @@ script:
 deploy:
   provider: script
   script: netlify deploy --prod --dir _book
-  skip_cleanup: true
+  cleanup: true
