fix lilypond install

--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -19,7 +19,7 @@ jobs:
           
       - name: Install LilyPond
         run: |
-          brew install LilyPond
+          brew cask install lilypond
 
       - name: Cache R packages
         uses: actions/cache@v1
