--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -16,10 +16,10 @@ jobs:
         run: |
           brew install pandoc
           brew install pandoc-citeproc
-          
-      - name: Install LilyPond
-        run: |
-          brew cask install lilypond
+
+#      - name: Install LilyPond
+#        run: |
+#          brew cask install lilypond
 
       - name: Cache R packages
         uses: actions/cache@v1
