--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 _book
 _bookdown_files
 musicians-compendium.rds
+
+# lilypond output
+lilypond/*-systems.tex
+lilypond/*-systems.texi
+lilypond/*-systems.count
+lilypond/*-1.eps
+lilypond/*-1.pdf
