update imports (again...)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Imports: bookdown,
          DiagrammeR,
          DiagrammeRsvg,
          magick,
+         rsvg,
          sessioninfo,
          tabr,
          tidyverse,
