--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Imports: bookdown,
          DiagrammeR,
          DiagrammeRsvg,
          magick,
+         patchwork,
          rsvg,
          sessioninfo,
          tabr,
