--- a/_output.yml
+++ b/_output.yml
@@ -17,4 +17,6 @@ bookdown::pdf_book:
   keep_tex: yes
   extra_dependencies: ["flafter"]
   df_print: kable
-bookdown::epub_book: default
+bookdown::epub_book:
+  stylesheet: style.css
+  pandoc_args: --epub-embed-font=fonts/bravuratext.otf
