--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Imports: bookdown,
          DiagrammeRsvg,
          magick,
          patchwork,
+         R.utils,
          rsvg,
          sessioninfo,
          tabr,
