--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,7 @@
 bookdown::gitbook:
   css: style.css
+  includes:
+    in_header: google_analytics.html
   pandoc_args: [ "--csl", "apa.csl" ]
   config:
     toc:
