change GH action runner R version

--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -4,7 +4,15 @@ on:
 
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: ${{ matrix.config.os }}
+
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+          - {os: macOS-latest,   r: '3.6.0'}
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
