fix env for renv

--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -13,6 +13,10 @@ jobs:
       matrix:
         config:
           - {os: macOS-latest,   r: '3.6.0'}
+    
+    env:
+      RENV_PATHS_ROOT: ~/Library/Application Support/renv
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
