--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Setup R
         uses: r-lib/actions/setup-r@master
+        with:
+          r-version: ${{ matrix.config.r }}
 
       - name: Install pandoc and pandoc citeproc
         run: |
@@ -58,11 +60,11 @@ jobs:
           key: bookdown-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-
 
-      # - name: Install packages
-      #   run: |
-      #     R -e 'install.packages("remotes")'
-      #     R -e 'remotes::install_deps(dependencies = TRUE)'
-          
+      - name: Install packages
+        run: |
+          R -e 'install.packages("remotes")'
+          R -e 'remotes::install_deps(dependencies = TRUE)'
+
       - name: Install PhantomJS
         run: R -e 'webshot::install_phantomjs()'
 
